Fix signing to allow reading balance and placing orders
